<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FF9800">

    <TextView
        android:id="@+id/homeTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/home_title"
        android:textColor="#00BCD4"
        android:textSize="26sp"
        android:textStyle="bold|italic"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="40dp" />

    <LinearLayout
        android:id="@+id/filterBar"
        android:orientation="horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        app:layout_constraintTop_toBottomOf="@id/homeTitle"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="20dp">

        <Button
            android:id="@+id/btnFilterAll"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/filter_all"
            android:backgroundTint="#00BCD4" />

        <Button
            android:id="@+id/btnFilterFollowed"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/filter_followed"
            android:layout_marginStart="12dp"
            android:backgroundTint="#00BCD4" />

        <Button
            android:id="@+id/btnFilterMine"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/filter_mine"
            android:layout_marginStart="12dp"
            android:backgroundTint="#00BCD4" />

    </LinearLayout>

    <androidx.cardview.widget.CardView
        android:id="@+id/cardListContainer"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="90dp"
        app:cardCornerRadius="16dp"
        app:cardElevation="6dp"
        app:layout_constraintTop_toBottomOf="@+id/filterBar"
        app:layout_constraintBottom_toTopOf="@+id/paginationBar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerViewPosts"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="12dp" />

        <TextView
            android:id="@+id/emptyState"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/feed_empty"
            android:textColor="#9E9E9E"
            android:textSize="16sp"
            android:visibility="gone" />

</androidx.cardview.widget.CardView>


    <LinearLayout
        android:id="@+id/paginationBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginBottom="140dp">

        <Button
            android:id="@+id/btnPrev"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/pagination_prev"
            android:backgroundTint="#00BCD4" />

        <TextView
            android:id="@+id/txtPageCounter"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/page_counter_default"
            android:textSize="16sp"
            android:layout_marginHorizontal="20dp" />

        <Button
            android:id="@+id/btnNext"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/pagination_next"
            android:layout_marginStart="16dp"
            android:backgroundTint="#00BCD4" />


    </LinearLayout>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fabCreatePost"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="24dp"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="4dp"
        android:contentDescription="@string/create_post"
        android:src="@android:drawable/ic_input_add"
        app:backgroundTint="#00BCD4"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:tint="@android:color/white" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fabProfile"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="24dp"
        android:layout_marginStart="24dp"
        android:layout_marginBottom="4dp"
        android:contentDescription="@string/profile_fab"
        android:src="@drawable/ic_person_placeholder"
        app:backgroundTint="#00BCD4"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:tint="@android:color/white" />

</androidx.constraintlayout.widget.ConstraintLayout>
